[package]
name = "helper"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4"
candid = "0.10"
ic-agent = "0.34"
ark-serialize = "0.4"
jolt-core = { path = "../../jolt/jolt-core" }
jolt-common = { path = "../../jolt/common", package = "common" }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
